examples/errors/unterminated_string.flx
// Error Example: Unterminated string literal
// Expected Error: [E031] Compiler error: expected expression
//
// This demonstrates a string literal that is missing the closing quote.

let message = "Hello World
print(message)
